[gd_scene load_steps=2 format=3 uid="uid://bcubw5t3fpyvq"]

[ext_resource type="Script" uid="uid://cmgy38uacx0iw" path="res://scenes/ui/character_menus/bribe_sorted_displayer.gd" id="1_227uc"]

[node name="BribeSortedDisplayer" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 19.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_227uc")

[node name="CountryLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="BribeRatioBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="BribeAmountLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
vertical_alignment = 1
